# exoskel_ws

./: .gitignore
install/exo_control/lib/exo_control/: imu_node
install/exo_control/share/ament_index/resource_index/package_run_dependencies/: exo_control
install/exo_control/share/ament_index/resource_index/parent_prefix_path/: exo_control
install/exo_control/share/exo_control/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/exo_control/share/exo_control/cmake/: exo_controlConfig-version.cmake  exo_controlConfig.cmake
install/exo_control/share/exo_control/environment/: ament_prefix_path.dsv  path.dsv
install/gait_estimator/lib/gait_estimator/: gait_estimator
install/gait_estimator/share/ament_index/resource_index/package_run_dependencies/: gait_estimator
install/gait_estimator/share/ament_index/resource_index/parent_prefix_path/: gait_estimator
install/gait_estimator/share/gait_estimator/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/gait_estimator/share/gait_estimator/cmake/: gait_estimatorConfig-version.cmake  gait_estimatorConfig.cmake
install/gait_estimator/share/gait_estimator/environment/: ament_prefix_path.dsv  path.dsv
log/: latest_build
src/exo_control/: CMakeLists.txt  package.xml
src/exo_control/src/: imu_node.cpp
src/gait_estimator/: CMakeLists.txt  package.xml
src/gait_estimator/src/: gait_estimator.cpp
