<?xml version="1.0"?>
<package format="3">
  <name>exo_control</name>
  <version>0.0.1</version>
  <description>Exoskeleton IMU control package</description>

  <maintainer email="you@todo.todo">your_name</maintainer>
  <license>Apache-2.0</license>

  <!-- REQUIRED -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ONLY ONE TYPE OF DEPEND -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>