<?xml version="1.0"?>
<package format="3">
  <name>gait_estimator</name>
  <version>0.0.1</version>
  <description>Gait phase estimation node</description>

  <maintainer email="you@todo.todo">your_name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
